--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -116,7 +116,7 @@
     </div>
 
 
-{#    #}
+{#  GOLDEN CARDS  #}
 
     <div>
         <h1 style="color: white">Regular Golden</h1>
@@ -219,6 +219,7 @@
         </div>
     </div>
 </div>
+
 
 </body>
 </html>
