--- a/static/card-gold.css
+++ b/static/card-gold.css
@@ -2,7 +2,11 @@
     box-sizing: border-box;
     /*border: dotted 2px #e8d290;*/
     /*filter: sepia(20%);*/
-    border: 2px solid var(--gold-color);
+    /*border: 2px solid var(--gold-color);*/
+}
+
+.card-gold .card-info .card-info-name{
+    color: var(--gold-color);
 }
 
 .card-gold.card-holo{
@@ -16,4 +20,8 @@
 
 .card-negative.card-gold .card-image {
     filter: invert(100%) sepia(150%) ;
+}
+
+.card-gold.card-regular .card-info-stats strong {
+    color: var(--gold-color); /* Color set in the holo section */
 }
