Updated cards styling

--- a/static/card-base.css
+++ b/static/card-base.css
@@ -3,7 +3,7 @@
     --card-width: 320px;
     --card-height: 480px;
     --glow-color: #9bffc3;
-    --glow-color-negative: #230684;
+    --glow-color-negative: #7319a8;
     --font-color: #ddd;
     --holo-speed: 6s;
     --gold-color: #e8d290;
