--- a/static/card-gold.css
+++ b/static/card-gold.css
@@ -15,11 +15,11 @@
 }
 
 .card-gold .card-image {
-    filter: sepia(150%);
+    filter: sepia(150%) saturate(200%);
 }
 
 .card-negative.card-gold .card-image {
-    filter: invert(100%) sepia(150%) ;
+    filter: invert(100%) sepia(150%) saturate(200%);
 }
 
 .card-gold.card-regular .card-info-stats strong {
