--- a/static/card-gold.css
+++ b/static/card-gold.css
@@ -9,19 +9,44 @@
     color: var(--gold-color);
 }
 
+.card-negative.card-gold .card-info .card-info-name{
+    color: var(--gold-color-negative);
+}
+
 .card-gold.card-holo{
     box-sizing: border-box;
     box-shadow: 0px 0px 20px 1px var(--gold-color);
 }
 
 .card-gold .card-image {
-    filter: sepia(150%) saturate(200%);
+    filter: sepia(100%) saturate(250%);
+}
+
+.card-gold .card-image-outer {
+    background: var(--gold-color)
 }
 
 .card-negative.card-gold .card-image {
-    filter: invert(100%) sepia(150%) saturate(200%);
+    filter: invert(100%) sepia(100%) saturate(250%);
+}
+
+.card-negative.card-gold .card-image-outer {
+    background: transparent
+}
+
+.card-negative.card-gold .card-info {
+    border: solid 4px var(--gold-color)
 }
 
 .card-gold.card-regular .card-info-stats strong {
     color: var(--gold-color); /* Color set in the holo section */
+}
+
+.card-gold.card-negative .card-info-stats strong {
+    color: var(--gold-color-negative); /* Color set in the holo section */
+}
+
+
+.card-gold.card-holo .card-info-name {
+    text-shadow: 0 0 10px var(--gold-color);
 }
